# SWGOH-Discord-Bot

./: .gitignore  Cargo.toml
src/: event_handler.rs  main.rs
src/commands/: mod.rs  raw_api_output.rs  reqwest_api.rs
src/commands/reqwest_api/: guild_schema.rs  mod.rs  reqwest_api.rs  swgohgg_globals.rs  user_schema.rs
