[package]
name = "swgoh_api_via_discord"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.19", features = [
    "native-tls-alpn",
    "cookies",
    "json",
] }
serde_json = "1.0.140"
once_cell = "1.18.0"
dotenv = "0.15.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
text_io = "0.1.12"
futures = "0.3.31"
serde = "1.0.219"
